@@ -1,5 +1,6 @@
 == master
 
+* Fix original ActiveRecord::Observer#update not being used for non-state_machine callbacks [Jeremy Wells]
 * Add support for ActiveRecord 3.0
 * Fix without_{name} scopes not quoting columns in ActiveRecord [Jon Evans]
 * Fix without_{name} scopes not scoping columns to the table in ActiveRecord and Sequel [Jon Evans]
